# minimal_Eros

./: .gitignore  CMakeLists.txt  process_events.py  setup.py  test.py  test_rgb.py
src/: bindings.cpp  eros.cpp  eros.h  event_processing.cpp  surface.cpp  surface.h
